# libaltar

./: .gitignore  CMakeLists.txt  LICENSE
include/: CMakeLists.txt
include/altar/: util.h  win.h
include/altar/win/: api.h  audio.h  file.h  functions.h  methods.h  png.h  string.h  texture.h  types.h  util.h
src/: CMakeLists.txt  analyze.c  file.c  load.c  png.c  string.c  texture.c  util.c
src/win/: audio.c  png.c  string.c
